--- a/index.html
+++ b/index.html
@@ -4096,7 +4096,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
     <!-- End user messages -->
   </div>
 </div>
-
+<p> This is to see if push command is working </p>
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-32 w3-light-grey w3-center">
